--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Letitbeaustin.GitHub.io by letitbeaustin</title>
+    <title>Let It Be Austin</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,12 +28,12 @@
 
       <section>
         <div id="title">
-          <h1>Letitbeaustin.GitHub.io</h1>
+          <h1>Let It Be Austin</h1>
           <p>Let It Be Austin</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/letitbeaustin">letitbeaustin</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+ <p>
+   I'm so excited about Let It Be Christmas...just bought tickets for all of us on Friday. If you love the Beatles music, you should go to this musical...the music of the Beatles telling the world's greatest love story...the story of Christmas. World Vision is sponsoring this musical production and it is going to be so good. Gateway Church in Austin is the location. Check out 
+ </p>       </div>
 
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
